# tbb-learning

./: .gitignore  README.md
tbb/arena/01/: main.cpp
tbb/arena/02/: CMakeLists.txt  main.cpp  ticktock.h
tbb/benchmark/01/: CMakeLists.txt  main.cpp
tbb/filter/01/: main.cpp  pod.h  run.sh
tbb/for/01/: main.cpp
tbb/for/02/: CMakeLists.txt  main.cpp
tbb/for/03/: main.cpp
tbb/for/05/: main.cpp  run.sh
tbb/for/06/: CMakeLists.txt  main.cpp  run.sh
tbb/pipeline/01/: main.cpp
tbb/qsort/01/: main.cpp
tbb/qsort/02/: main.cpp
tbb/qsort/03/: main.cpp
tbb/reduce/01/: main.cpp
tbb/reduce/02/: CMakeLists.txt  main.cpp
tbb/reduce/03/: main.cpp
tbb/reduce/04/: main.cpp
tbb/reduce/05/: run.sh
tbb/reduce/06/: main.cpp
tbb/split/01/: CMakeLists.txt  main.cpp  run.sh
tbb/split/02/: main.cpp
tbb/task/01/: CMakeList.txt  CMakeLists.txt  main.cpp
tbb/task/02/: main.cpp  run.sh
tbb/task/03/: main.cpp
tbb/task/04/: main.cpp
tbb/vector/01/: main.cpp
tbb/vector/02/: main.cpp
